Fix display problem on iOS devices
Fixed
-Logo on login page does not scale with screen

--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -8,27 +8,24 @@
 }
 
 .top {
-    position: absolute;
-    width: 100vw;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    top: 0%;
     bottom: 65%;
-    right: 0%;
-    left: 0%;
+    display: flex;
+    justify-content: center;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    flex-direction: column;
+    align-items: center;
 }
 
 .logo {
-    max-width: 1030px;
+    background: transparent;
     max-height: 100%;
-    margin: 0 auto;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 1030px;
     padding-left: 15px;
     padding-right: 15px;
     padding-top: 40px;
-    background: transparent;
 }
 
 @media (min-height: 501px) {
